# pytest-requests-api-test

./: .env  .gitignore  conftest.py  pyproject.toml  pytest.ini
cases/: get.yaml  post.yaml
helper/: api_client.py  data.py  log.py
schema/: get.py
tests/: test_get.py  test_post.py
